syntax = "proto3";

option java_multiple_files = true;
package com.sourcegraph.lsif_protocol;

message LsifObject {
  int32 id = 1;
  string type = 2;
  string label = 3;
  string version = 4;
  string projectRoot = 5;
  string positionEncoding = 6;
  LsifToolInfo toolInfo = 7;
  string kind = 8;
  string uri = 9;
  string language = 10;
  int32 outV = 12;
  int32 inV = 13;
  repeated int32 inVs = 14;
  int32 document = 15;
  LsifHover result = 16;
  string scheme = 17;
  string identifier = 18;
  LsifPosition start = 19;
  LsifPosition end = 20;
  string name = 21;
  string manager = 22;
}

message LsifToolInfo {
  string name = 1;
  string version = 2;
  repeated string args = 3;
}

message LsifPosition {
  int32 line = 1;
  int32 character = 2;
}

message LsifHover {
  Content contents = 1;
  message Content {
     string kind = 1; // not MarkupKind because must be lowercase
     string value = 2;
  }
}

enum MarkupKind {
  PLAINTEXT = 0;
  MARKDOWN = 1;
}
